# sadiss

./: .eslintrc.js  .gitignore  .prettierrc.json  Cargo.toml  README.md  capacitor.config.ts  composer.json  declarations.d.ts  index.html  index.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  webpack.config.js  webpack.mix.js
admin_client/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vue.config.js
admin_client_new/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
android/: capacitor.settings.gradle
app/: .env.example  .eslintrc.js  index.html  ionic.config.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/: .env  README.md  index.html  tailwind.config.js  tsconfig.json
config/: app.php
max/: Midi2Sdif.maxpat  README.md  noteEnvelope.maxpat  package-lock.json  package.json  sadiss.js  sadiss.maxpat
old_admin_client/: .env.example  README.md  index.html  tailwind.config.js  vite.config.ts
public/: index.html  mix-manifest.json
routes/: api.php  web.php
server/: .env.example  .env.test  .env.test.example  .gitignore  README.md  activePerformance.ts  auth.ts  database.ts  jest.config.js  package-lock.json  package.json  server.ts  tailwind.config.js  tsconfig.json  vitest.config.ts  webpack.mix.js
src/: App.vue  MCorpMediasync.js  PerformanceNow.js  Player.js  Player.ts  Player_old.js  constants.js  index.css  lib.rs  main.js  main.ts
websocket_client/: index.html  (+2 more)
(+412 files in other folders)
