[package]
name = "webaudio"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
serde = { version = "1.0.136", features = ["derive"] }
rmp-serde = "1.0.0"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.59"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
]
